@@ -1,7 +1,5 @@
 package com.fpt.medically_be.config;
 
-import com.fpt.medically_be.dto.auth.LoginRequestDTO;
-import com.fpt.medically_be.entity.AccountMember;
 import com.nimbusds.jose.jwk.JWK;
 import com.nimbusds.jose.jwk.JWKSet;
 import com.nimbusds.jose.jwk.RSAKey;
@@ -14,9 +12,6 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.AuthenticationProvider;
-import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -29,6 +24,8 @@ import org.springframework.security.oauth2.jwt.JwtDecoder;
 import org.springframework.security.oauth2.jwt.JwtEncoder;
 import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
 import org.springframework.security.oauth2.jwt.NimbusJwtEncoder;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
+import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.oauth2.server.resource.web.BearerTokenAuthenticationEntryPoint;
 import org.springframework.security.oauth2.server.resource.web.access.BearerTokenAccessDeniedHandler;
 import org.springframework.security.web.SecurityFilterChain;
@@ -38,7 +35,9 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.security.interfaces.RSAPrivateKey;
 import java.security.interfaces.RSAPublicKey;
-import java.util.*;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -46,13 +45,12 @@ import java.util.*;
 @EnableMethodSecurity(prePostEnabled = true, securedEnabled = true, proxyTargetClass = true)
 public class SecurityConfig {
 
-    private final CustomJwtAuthenticationConverter jwtAuthenticationConverter;
-
     @Value("${jwt.public.key}")
-    private RSAPublicKey key;
+    RSAPublicKey key;
 
     @Value("${jwt.private.key}")
-    private RSAPrivateKey privateKey;
+    RSAPrivateKey privateKey;
+
     @Value("${frontend.url}")
     private String frontendUrl;
 
@@ -61,19 +59,19 @@ public class SecurityConfig {
         // @formatter:off
         http
             .authorizeHttpRequests(authorize -> authorize
-                .requestMatchers("/api/v1/auth/**").permitAll() // Allow all auth endpoints
-                .requestMatchers("/api/mock/**").permitAll()
-                .requestMatchers("/swagger-ui/**","v3/api-docs/**").permitAll()
+                .requestMatchers("/api/v1/v1/auth/**").permitAll() // Allow all auth endpoints
+                .requestMatchers("/api/v1/mock/**").permitAll()
+                .requestMatchers("/swagger-ui/**","/v3/api-docs/**").permitAll()
                 .requestMatchers("/actuator/**").permitAll() // Allow actuator endpoints
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                    .requestMatchers("/api/students/**").permitAll()
-                    .requestMatchers("/api/parents/**").permitAll()
-                    .requestMatchers("/api/vaccinations/**").permitAll()
-                    .requestMatchers("/api/health-profiles/**").permitAll()
-                    .requestMatchers("/api/medical-checkups/**").permitAll()
-                    .requestMatchers("/api/medication-instructions/**").permitAll()
-                    .requestMatchers("/api/usersController/**").permitAll()
-                    .requestMatchers("/api/medical-incidents/**").permitAll()
+                    .requestMatchers("/api/v1/students/**").permitAll()
+                    .requestMatchers("/api/v1/parents/**").permitAll()
+                    .requestMatchers("/api/v1/vaccinations/**").permitAll()
+                    .requestMatchers("/api/v1/health-profiles/**").permitAll()
+                    .requestMatchers("/api/v1/medical-checkups/**").permitAll()
+                    .requestMatchers("/api/v1/medication-instructions/**").permitAll()
+                    .requestMatchers("/api/v1/usersController/**").permitAll()
+                    .requestMatchers("/api/v1/medical-incidents/**").permitAll()
 
 
 
@@ -82,12 +80,12 @@ public class SecurityConfig {
             .csrf(AbstractHttpConfigurer::disable)
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .oauth2Login(oauth2Login -> oauth2Login
-                        .defaultSuccessUrl("/api/v1/auth/oauth2/success", true)
-                        .failureUrl("/api/v1/auth/oauth2/failure")
+                        .defaultSuccessUrl("/api/v1/v1/auth/oauth2/success", true)
+                        .failureUrl("/api/v1/v1/auth/oauth2/failure")
                         .permitAll()
                 )
             .oauth2ResourceServer(oauth2 -> oauth2
-                .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter))
+                .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter()))
             )
             .exceptionHandling(exceptions -> exceptions
                 .authenticationEntryPoint(new BearerTokenAuthenticationEntryPoint())
@@ -103,11 +101,18 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*")); // Allow all origins for development
-        configuration.setAllowedOrigins(Collections.singletonList(frontendUrl));
+        
+        // Only allow specific origins when credentials are enabled
+        configuration.setAllowedOrigins(Arrays.asList(
+            "http://localhost:5173",
+            "http://localhost:3000",
+            "http://127.0.0.1:5173",
+            "http://127.0.0.1:3000"
+        ));
+        
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("*")); // Allow all headers
-        configuration.setAllowCredentials(true); // Allow credentials
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true);
         configuration.setExposedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -137,4 +142,14 @@ public class SecurityConfig {
         return new NimbusJwtEncoder(jwks);
     }
 
+    @Bean
+    public JwtAuthenticationConverter jwtAuthenticationConverter() {
+        JwtGrantedAuthoritiesConverter authoritiesConverter = new JwtGrantedAuthoritiesConverter();
+        authoritiesConverter.setAuthorityPrefix("ROLE_");
+        authoritiesConverter.setAuthoritiesClaimName("role");
+
+        JwtAuthenticationConverter jwtConverter = new JwtAuthenticationConverter();
+        jwtConverter.setJwtGrantedAuthoritiesConverter(authoritiesConverter);
+        return jwtConverter;
+    }
 }
